--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
             height: 100vh;
             overflow: hidden;
             background: var(--primary);
-            background-image: url('https://s34.picofile.com/file/8486678034/icon_painter_works_new_icon_with_brush.jpg');
+            background-image: url('image3.png');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -430,7 +430,7 @@
             text-align: center;
             position: relative;
             z-index: 2;
-            background-image: url('https://s34.picofile.com/file/8486678042/woman_man_mix_oils_palette.jpg');
+            background-image: url('image1.png');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -596,7 +596,7 @@
             padding: 80px 50px;
             background: var(--primary);
             position: relative;
-            background-image: url('https://s34.picofile.com/file/8486678042/woman_man_mix_oils_palette.jpg');
+            background-image: url('image2.png');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -1095,4 +1095,5 @@
         });
     </script>
 </body>
+
 </html>
