--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
             height: 100vh;
             overflow: hidden;
             background: var(--primary);
-            background-image: url('image3.png');
+            background-image: url('https://raw.githubusercontent.com/thisisahmadreza/Derangfestival/refs/heads/main/image3.png');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -430,7 +430,7 @@
             text-align: center;
             position: relative;
             z-index: 2;
-            background-image: url('image1.png');
+            background-image: url('https://raw.githubusercontent.com/thisisahmadreza/Derangfestival/refs/heads/main/image1.png');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -596,7 +596,7 @@
             padding: 80px 50px;
             background: var(--primary);
             position: relative;
-            background-image: url('image2.png');
+            background-image: url('https://raw.githubusercontent.com/thisisahmadreza/Derangfestival/refs/heads/main/image2.png');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -1097,3 +1097,4 @@
 </body>
 
 </html>
+
