--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
             border-radius: 0;
         }
         .timeline-item:not(:last-child) {
-            border-left: 2px solid #fff3;
+            border-left: 2px solid #383838;
         }
         .timeline-year {
             font-family: 'Vazirmatn', sans-serif;
@@ -1097,4 +1097,5 @@
 </body>
 
 </html>
+
 
