--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
             flex: 1 1 180px;
             min-width: 120px;
             max-width: 1fr;
-            background: var(--accent);
+            background: #d9ac4e;
             color: var(--white);
             position: relative;
             transition: flex-basis 0.45s cubic-bezier(.6,2,.6,1), background 0.4s;
@@ -517,7 +517,7 @@
         .timeline-item:hover,
         .timeline-item:focus {
             flex-basis: 320px;
-            background: var(--primary);
+            background: #d9ac4e;
             z-index: 2;
         }
         .timeline-item:hover .timeline-year,
@@ -1097,5 +1097,6 @@
 </body>
 
 </html>
+
 
 
