Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@
             flex-wrap: wrap;
         }
         .action-btn {
-            background: linear-gradient(90deg, var(--button-register) 60%, var(--accent));
+            background: linear-gradient(90deg, #d04545 60%, #45b4d0);
             color: var(--white);
             font-weight: 900;
             border-radius: 100px;
@@ -730,7 +730,7 @@
             transform: scale(.97);
         }
         .action-btn:hover, .action-btn:focus {
-            background: linear-gradient(90deg, var(--accent) 60%, var(--button-register));
+            background: linear-gradient(90deg, #45b4d0 60%, #45b4d0);
             color: var(--white);
             box-shadow: var(--register-btn-glow);
         }
@@ -1097,6 +1097,7 @@
 </body>
 
 </html>
+
 
 
 
