--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
             font-weight: 900;
             font-size: 1.16rem;
             border: none;
-            background: linear-gradient(90deg, var(--button-register) 60%, var(--accent));
+            background: linear-gradient(90deg, #d04545 60%, #45b4d0);
             color: var(--white);
             box-shadow: var(--register-btn-shadow), 0 0 0 5px rgba(35,155,167,0.08);
             outline: none;
@@ -1097,6 +1097,7 @@
 </body>
 
 </html>
+
 
 
 
