--- a/index.html
+++ b/index.html
@@ -615,6 +615,7 @@
         }
         .categories .section-title {
             color: var(--bg-main);
+            text-align: center;
         }
         .category-grid {
             display: grid;
@@ -661,8 +662,6 @@
         .category-card:hover, .category-card:focus {
             background: var(--accent);
             color: var(--white);
-            border: 2px solid var(--primary);
-            box-shadow: 0 10px 25px var(--primary);
             transform: scale(1.045);
         }
         .category-icon {
@@ -1097,6 +1096,7 @@
 </body>
 
 </html>
+
 
 
 
