--- a/index.html
+++ b/index.html
@@ -305,6 +305,15 @@
             letter-spacing: 1px;
             text-shadow: 0 2px 10px rgba(35,155,167,0.16);
         }
+        	.slide-title-image {
+  	  max-width: 340px;
+   	 width: 100%;
+  	  height: auto;
+   	 margin-bottom: 20px;
+  	  display: block;
+  	  margin-left: auto;
+   	 margin-right: auto;
+	}
         .slide-description {
             font-size: 1.25rem;
             line-height: 1.8;
@@ -864,21 +873,21 @@
     <section id="home" class="slideshow-container">
         <div class="slide active">
             <div class="slide-content">
-                <h1 class="slide-title">رویداد هنری نگاه نو</h1>
+                <img src="https://raw.githubusercontent.com/thisisahmadreza/Derangfestival/refs/heads/main/derang-3-2-logo.png" alt="عنوان رویداد" class="slide-title-image" />
                 <p class="slide-description">جایی که خلاقیت با نوآوری ملاقات می‌کند. در این رویداد، دانشجویان فرصت دارند آثار هنری خود را به نمایش بگذارند و با دیگر هنرمندان ارتباط برقرار کنند.</p>
                 <a href="#about" class="slide-btn btn btn-white btn-animated">کشف کنید</a>
             </div>
         </div>
         <div class="slide">
             <div class="slide-content">
-                <h1 class="slide-title">هنر و فناوری</h1>
+                <img src="https://raw.githubusercontent.com/thisisahmadreza/Derangfestival/refs/heads/main/derang-3-2-logo.png" alt="عنوان رویداد" class="slide-title-image" />
                 <p class="slide-description">ترکیبی منحصر به فرد از هنرهای سنتی و مدرن. از نقاشی و مجسمه‌سازی تا هنرهای دیجیتال و تعاملی، همه چیز را در اینجا خواهید یافت.</p>
                 <a href="#categories" class="slide-btn btn btn-white btn-animated">دسته‌بندی آثار</a>
             </div>
         </div>
         <div class="slide">
             <div class="slide-content">
-                <h1 class="slide-title">شروع سفر</h1>
+                <img src="https://raw.githubusercontent.com/thisisahmadreza/Derangfestival/refs/heads/main/derang-3-2-logo.png" alt="عنوان رویداد" class="slide-title-image" />
                 <p class="slide-description">همین حالا عضو جامعه هنرمندان جوان شوید. ثبت نام رایگان و فرصت برابر برای همه دانشجویان در تمام رشته‌های هنری.</p>
                 <a href="#register" class="slide-btn btn btn-white btn-animated">ثبت نام کنید</a>
             </div>
@@ -1096,6 +1105,7 @@
 </body>
 
 </html>
+
 
 
 
