--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
             flex: 1 1 180px;
             min-width: 120px;
             max-width: 1fr;
-            background: #d9ac4e;
+            background: #6097a3;
             color: var(--white);
             position: relative;
             transition: flex-basis 0.45s cubic-bezier(.6,2,.6,1), background 0.4s;
@@ -1105,6 +1105,7 @@
 </body>
 
 </html>
+
 
 
 
