--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>رویداد هنری دانشجویی - نگاه نو</title>
+    <title>رویداد هنری دانشجویی - درنگ</title>
     <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
@@ -850,7 +850,7 @@
             <button class="nav-hamburger" id="navHamburger" aria-label="باز کردن منو">
                 <i class="fas fa-bars"></i>
             </button>
-            <a href="#" class="logo">نگاه نو</a>
+            <a href="#" class="logo">درنگ</a>
             <ul class="nav-menu">
                 <li><a href="#home">خانه</a></li>
                 <li><a href="#about">درباره رویداد</a></li>
@@ -906,7 +906,7 @@
       <section class="event-intro">
         <h2 class="section-title">درباره رویداد</h2>
         <p class="intro-text">
-          رویداد هنری "نگاه نو" یک فستیوال سالانه است که با هدف حمایت از استعدادهای جوان و ارائه فرصتی برای نمایش آثار هنری دانشجویان برگزار می‌شود. این رویداد شامل انواع مختلف هنرها از تجسمی تا نمایشی، از ادبی تا دیجیتال است و محیطی فراهم می‌کند که هنرمندان جوان بتوانند تجربیات خود را به اشتراک بگذارند.
+          رویداد هنری "درنگ" یک فستیوال سالانه است که با هدف حمایت از استعدادهای جوان و ارائه فرصتی برای نمایش آثار هنری دانشجویان برگزار می‌شود. این رویداد شامل انواع مختلف هنرها از تجسمی تا نمایشی، از ادبی تا دیجیتال است و محیطی فراهم می‌کند که هنرمندان جوان بتوانند تجربیات خود را به اشتراک بگذارند.
         </p>
         <section id="timeline" class="timeline-panel">
           <div class="timeline-track">
@@ -1026,7 +1026,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; ۱۴۰۳ رویداد هنری نگاه نو. تمامی حقوق محفوظ است.</p>
+            <p>&copy; ۱۴۰۳ رویداد هنری درنگ. تمامی حقوق محفوظ است.</p>
         </div>
     </footer>
 
@@ -1105,6 +1105,7 @@
 </body>
 
 </html>
+
 
 
 
