--- a/index.html
+++ b/index.html
@@ -462,6 +462,9 @@
             color: var(--primary);
             letter-spacing: 1px;
         }
+		.about-title {
+    color: #ffffff;
+}
         .intro-text {
             font-size: 1.1rem;
             line-height: 2;
@@ -904,7 +907,7 @@
     <!-- درباره رویداد و تایم‌لاین -->
     <div class="about-wrapper" id="about">
       <section class="event-intro">
-        <h2 class="section-title">درباره رویداد</h2>
+        <h2 class="section-title about-title">درباره رویداد</h2>
         <p class="intro-text">
           رویداد هنری "درنگ" یک فستیوال سالانه است که با هدف حمایت از استعدادهای جوان و ارائه فرصتی برای نمایش آثار هنری دانشجویان برگزار می‌شود. این رویداد شامل انواع مختلف هنرها از تجسمی تا نمایشی، از ادبی تا دیجیتال است و محیطی فراهم می‌کند که هنرمندان جوان بتوانند تجربیات خود را به اشتراک بگذارند.
         </p>
@@ -1105,6 +1108,7 @@
 </body>
 
 </html>
+
 
 
 
