--- a/index.html
+++ b/index.html
@@ -911,41 +911,30 @@
         <p class="intro-text">
           رویداد هنری "درنگ" یک فستیوال سالانه است که با هدف حمایت از استعدادهای جوان و ارائه فرصتی برای نمایش آثار هنری دانشجویان برگزار می‌شود. این رویداد شامل انواع مختلف هنرها از تجسمی تا نمایشی، از ادبی تا دیجیتال است و محیطی فراهم می‌کند که هنرمندان جوان بتوانند تجربیات خود را به اشتراک بگذارند.
         </p>
-        <section id="timeline" class="timeline-panel">
+<section id="timeline" class="timeline-panel">
           <div class="timeline-track">
             <div class="timeline-item">
-              <div class="timeline-year">۱۵ آذر<br>۱۴۰۳</div>
+              <div class="timeline-year">فراخوان آثار</div>
               <div class="timeline-desc">
-                <h4>شروع ثبت‌نام</h4>
-                <p>آغاز ثبت‌نام و ارسال آثار</p>
+                <h4>10 شهریور</h4>
               </div>
             </div>
             <div class="timeline-item">
-              <div class="timeline-year">۳۰ دی<br>۱۴۰۳</div>
+              <div class="timeline-year">داوری آثار</div>
               <div class="timeline-desc">
-                <h4>پایان ثبت‌نام</h4>
-                <p>آخرین مهلت ارسال آثار</p>
+                <h4>20 مهر</h4>
               </div>
             </div>
             <div class="timeline-item">
-              <div class="timeline-year">۱۵ بهمن<br>۱۴۰۳</div>
+              <div class="timeline-year">برپایی نمایشگاه</div>
               <div class="timeline-desc">
-                <h4>شروع داوری</h4>
-                <p>بررسی و ارزیابی آثار</p>
+                <h4>30 مهر</h4>
               </div>
             </div>
             <div class="timeline-item">
-              <div class="timeline-year">۱۰ اسفند<br>۱۴۰۳</div>
+              <div class="timeline-year">مراسم اختتامیه</div>
               <div class="timeline-desc">
-                <h4>اعلام نتایج</h4>
-                <p>اعلام برندگان</p>
-              </div>
-            </div>
-            <div class="timeline-item">
-              <div class="timeline-year">۲۰ اسفند<br>۱۴۰۳</div>
-              <div class="timeline-desc">
-                <h4>اختتامیه</h4>
-                <p>مراسم و نمایشگاه آثار</p>
+                <h4>31 مهر</h4>
               </div>
             </div>
           </div>
@@ -1108,6 +1097,7 @@
 </body>
 
 </html>
+
 
 
 
