--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
         .timeline-desc h4 {
             font-size: 1.08rem;
             font-weight: 800;
-            color: var(--primary);
+            color: #202020;
             margin: 10px 0 7px 0;
         }
         .timeline-desc p {
@@ -1097,6 +1097,7 @@
 </body>
 
 </html>
+
 
 
 
