--- a/index.html
+++ b/index.html
@@ -746,15 +746,15 @@
             box-shadow: var(--register-btn-glow);
         }
         .contact-btn {
+    text-decoration: none;
             background: var(--white);
-            color: var(--primary);
+            color: #d9ac4e;
             font-weight: 700;
             border-radius: 100px;
             font-size: 1.08rem;
             padding: 14px 40px;
             margin-top: 0;
             box-shadow: 0 2px 12px rgba(35,155,167,0.07);
-            border: 2px solid var(--primary);
             transition: background .2s, color .2s, border .2s, transform .13s;
             letter-spacing: 1px;
         }
@@ -987,8 +987,8 @@
         <h2 class="section-title">آماده شرکت هستید؟</h2>
         <p style="color: var(--bg-main); font-size: 1.12rem; margin-bottom: 25px;">همین حالا آثار خود را ثبت کنید و در بزرگترین رویداد هنری دانشجویی شرکت کنید.</p>
         <div class="action-buttons">
-            <a href="#" class="action-btn btn btn-white btn-animated" tabindex="0">ثبت نام و ارسال آثار</a>
-            <a href="#contact" class="contact-btn btn btn-white btn-animated" tabindex="0">تماس با ما</a>
+            <a href="#" class="action-btn btn btn-white btn-animated" tabindex="0">ثبت نام و ارسال اثر</a>
+            <a href="#contact" class="contact-btn btn btn-white btn-animated" tabindex="0">سوالی داری؟</a>
         </div>
     </section>
 
@@ -1097,6 +1097,7 @@
 </body>
 
 </html>
+
 
 
 
