--- a/index.html
+++ b/index.html
@@ -511,6 +511,8 @@
             overflow: hidden;
             z-index: 1;
             border-radius: 0;
+		    opacity: 0.9; /* مقدار شفافیت دلخواه؛ کمتر یعنی شفاف‌تر */
+
         }
         .timeline-item:not(:last-child) {
             border-left: 2px solid #383838;
@@ -1097,6 +1099,7 @@
 </body>
 
 </html>
+
 
 
 
