--- a/index.html
+++ b/index.html
@@ -638,6 +638,7 @@
             max-width: 1100px;
             margin: 0 auto;
             padding: 0 18px;
+		    opacity: 0.9; /* مقدار شفافیت دلخواه؛ کمتر یعنی شفاف‌تر */
         }
         @media (max-width:600px) {
             .categories { padding: 31px 3vw;}
@@ -1099,6 +1100,7 @@
 </body>
 
 </html>
+
 
 
 
