--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
             letter-spacing: 1px;
         }
 		.about-title {
-    color: #ffffff;
+    color: #2f2a20;
 }
         .intro-text {
             font-size: 1.1rem;
@@ -499,8 +499,8 @@
             flex: 1 1 180px;
             min-width: 120px;
             max-width: 1fr;
-            background: #6097a3;
-            color: var(--white);
+            background: #cbba97;
+            color: #2f2a20;
             position: relative;
             transition: flex-basis 0.45s cubic-bezier(.6,2,.6,1), background 0.4s;
             display: flex;
@@ -1100,6 +1100,7 @@
 </body>
 
 </html>
+
 
 
 
