--- a/index.html
+++ b/index.html
@@ -939,13 +939,13 @@
         }
 
         .action-btn {
-            color: #266bad;
+            color: #202020;
             font-weight: bolder;
             border-radius: 100px;
             font-size: 1.18rem;
             padding: 18px 52px;
             letter-spacing: 1.4px;
-            text-shadow: 0 2px 12px rgba(210, 93, 93, 0.18);
+            text-shadow: 0 2px 12px rgba(213, 200, 200, 0.3);
             transition: background .2s, color .2s, box-shadow .2s, transform .13s;
             border: none;
             box-shadow: 1px 0px 12px 3px rgb(4 4 4 / 16%);
