--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             --white: #fff;
             --text: #1d2020;
             --navbar-shadow: 0 8px 32px rgba(0, 0, 0, 0.12);
-            --navbar-bg: rgba(44, 44, 56, 0.84);
-            --menu-hover-bg: rgba(35, 155, 167, 0.22);
+            --navbar-bg: rgba(190, 190, 190, 0.3);
+            --menu-hover-bg: rgba(83, 98, 99, 0.22);
             --register-btn-shadow: 0 8px 24px rgba(210, 93, 93, 0.13), 0 2px 8px rgba(35, 155, 167, 0.10);
             --register-btn-glow: 0 0 0 4px rgba(210, 93, 93, 0.18);
         }
@@ -1592,7 +1592,7 @@
                 <li><a href="#categories">دسته‌بندی آثار</a></li>
                 <li><a href="#contact">تماس</a></li>
             </ul>
-            <a href="#register" class="nav-register-btn">ثبت نام</a>
+            <a href="https://survey.porsline.ir/s/n0QVZ13c" class="nav-register-btn">ثبت نام</a>
         </div>
         <ul class="nav-menu-mobile" id="navMenuMobile" style="display: none;">
             <li><a href="#home">خانه</a></li>
