--- a/index.html
+++ b/index.html
@@ -715,7 +715,6 @@
         .timeline-item:not(:last-child) {}
 
         .timeline-year {
-            font-family: 'Vazirmatn', sans-serif;
             font-size: 1.18rem;
             font-weight: 700;
             letter-spacing: 1px;
@@ -1653,19 +1652,19 @@
             <section id="timeline" class="timeline-panel">
                 <div class="timeline-track">
                     <div class="timeline-item">
-                        <div class="timeline-year">فراخوان آثار</div>
+                        <div class="title-font timeline-year">فراخوان آثار</div>
                         <div class="timeline-desc">
                             <h4>۱۸ شهریور تا ۴ مهر</h4>
                         </div>
                     </div>
                     <div class="timeline-item">
-                        <div class="timeline-year">داوری آثار</div>
+                        <div class="title-font timeline-year">داوری آثار</div>
                         <div class="timeline-desc">
                             <h4>۵ الی ۱۵ مهر</h4>
                         </div>
                     </div>
                     <div class="timeline-item">
-                        <div class="timeline-year">نمایشگاه و اختتامیه</div>
+                        <div class="title-font timeline-year">نمایشگاه و اختتامیه</div>
                         <div class="timeline-desc">
                             <h4>۱۸ مهر</h4>
                         </div>
