--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>رویداد هنری دانشجویی - درنگ</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="icon" type="image/png"
+        href="https://raw.githubusercontent.com/thisisahmadreza/Derangfestival/refs/heads/main/fav/favicon-96x96.png"
+        sizes="96x96" />
+    <link rel="icon" type="image/svg+xml"
+        href="https://raw.githubusercontent.com/thisisahmadreza/Derangfestival/refs/heads/main/fav/favicon.svg" />
+    <link rel="shortcut icon"
+        href="https://raw.githubusercontent.com/thisisahmadreza/Derangfestival/refs/heads/main/fav/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180"
+        href="https://raw.githubusercontent.com/thisisahmadreza/Derangfestival/refs/heads/main/fav//apple-touch-icon.png" />
+    <link rel="manifest"
+        href="https://raw.githubusercontent.com/thisisahmadreza/Derangfestival/refs/heads/main/fav//site.webmanifest" />
     <style>
         :root {
             --bg-main: #ECECBB;
