--- a/index.html
+++ b/index.html
@@ -1695,8 +1695,11 @@
         <h2 class="title-font section-title">فراخوان آثار</h2>
         <p class="intro-text-f">
             شرکت‌کنندگان می‌توانند آثار خود مرتبط با محوریت رویداد را در دسته‌بندی‌های ذیل ارسال کنند. برای مشاهده
-            شیوه‌نامه ارسال آثار و نکات تکمیلی به کاتالوگ فراخوان مراجعه کنید.
+            <a href="https://raw.githubusercontent.com/thisisahmadreza/Derangfestival/refs/heads/main/Derang1404-Guidlines.pdf"
+                target="_blank" rel="noopener noreferrer" style="font-weight:bolder; color:#000000;">شیوه‌نامه</a>
+            ارسال آثار و نکات تکمیلی به کاتالوگ فراخوان مراجعه کنید.
         </p>
+
         <div class="category-grid">
             <div class="category-card" tabindex="0">
                 <i class="fas fa-palette category-icon"></i>
