--- a/index.html
+++ b/index.html
@@ -1665,19 +1665,19 @@
                     <div class="timeline-item">
                         <div class="title-font timeline-year">فراخوان آثار</div>
                         <div class="timeline-desc">
-                            <h4>۱۸ شهریور تا ۴ مهر</h4>
+                            <h4>۱۸ شهریور تا ۲۵ مهر</h4>
                         </div>
                     </div>
                     <div class="timeline-item">
                         <div class="title-font timeline-year">داوری آثار</div>
                         <div class="timeline-desc">
-                            <h4>۵ الی ۱۵ مهر</h4>
+                            <h4>۲۶ مهر تا ۵ آبان</h4>
                         </div>
                     </div>
                     <div class="timeline-item">
                         <div class="title-font timeline-year">نمایشگاه و اختتامیه</div>
                         <div class="timeline-desc">
-                            <h4>۱۸ مهر</h4>
+                            <h4>۹ آبان</h4>
                         </div>
                     </div>
                 </div>
@@ -1730,7 +1730,7 @@
         <div class="action-buttons">
             <a href="https://survey.porsline.ir/s/n0QVZ13c" class="action-btn btn btn-white btn-animated"
                 tabindex="0">ثبت نام و ارسال اثر</a>
-            <a href="https://t.me/Medart_support" class="contact-btn btn btn-white btn-animated" tabindex="0">سوالی
+            <a href="https://t.me/Medart_support2" class="contact-btn btn btn-white btn-animated" tabindex="0">سوالی
                 داری؟</a>
         </div>
     </section>
