Update footer link to festival guidelines PDF

--- a/index.html
+++ b/index.html
@@ -1783,7 +1783,7 @@
             <div class="footer-section">
                 <h3>لینک‌های مفید</h3>
                 <p><a href="#" style="color: var(--bg-main); text-decoration: none;">راهنمای ثبت نام</a></p>
-                <p><a href="#" style="color: var(--bg-main); text-decoration: none;">قوانین و مقررات</a></p>
+                <p><a href="https://raw.githubusercontent.com/thisisahmadreza/Derangfestival/refs/heads/main/Derang1404-Guidlines.pdf" style="color: var(--bg-main); text-decoration: none;">شیوه‌نامه جشنواره</a></p>
                 <p><a href="#" style="color: var(--bg-main); text-decoration: none;">سوالات متداول</a></p>
             </div>
             <div class="footer-section">
