--- a/index.html
+++ b/index.html
@@ -1619,7 +1619,7 @@
                 <li><a href="#categories">دسته‌بندی آثار</a></li>
                 <li><a href="#contact">تماس</a></li>
             </ul>
-            <a href="https://survey.porsline.ir/s/n0QVZ13c" class="title-font nav-register-btn">ثبت نام</a>
+            <a href="https://survey.porsline.ir/s/n0QVZ13c" class="title-font nav-register-btn">ثبت نام اختتامیه</a>
         </div>
         <ul class="nav-menu-mobile" id="navMenuMobile" style="display: none;">
             <li><a href="#home">خانه</a></li>
@@ -1638,7 +1638,7 @@
             <p class="slide-description">
                 <span class="typewriter-text" id="typewriterText"></span>
             </p>
-            <a href="#about" class="slide-btn btn btn-white btn-animated">کشف کنید</a>
+            <a href="#categories" class="slide-btn btn btn-white btn-animated">کشف کنید</a>
         </div>
         <div class="scroll-indicator">
             <span class="mouse-icon"></span>
@@ -1677,7 +1677,9 @@
                     <div class="timeline-item">
                         <div class="title-font timeline-year">نمایشگاه و اختتامیه</div>
                         <div class="timeline-desc">
-                            <h4>۹ آبان</h4>
+                            <h4>۲۰ آبان
+                                <p>تالار شریعتی دانشگاه علوم پزشکی اصفهان</p>
+                            </h4>
                         </div>
                     </div>
                 </div>
@@ -1692,12 +1694,9 @@
 
     <!-- دسته‌بندی آثار -->
     <section id="categories" class="categories full-width slider">
-        <h2 class="title-font section-title">فراخوان آثار</h2>
+        <h2 class="title-font section-title">نمایشگاه آثار</h2>
         <p class="intro-text-f">
-            شرکت‌کنندگان می‌توانند آثار خود مرتبط با محوریت رویداد را در دسته‌بندی‌های ذیل ارسال کنند. برای مشاهده
-            <a href="https://raw.githubusercontent.com/thisisahmadreza/Derangfestival/refs/heads/main/Derang1404-Guidlines.pdf"
-                target="_blank" rel="noopener noreferrer" style="font-weight:bolder; color:#000000;">شیوه‌نامه</a>
-            ارسال آثار و نکات تکمیلی به کاتالوگ فراخوان مراجعه کنید.
+نمایشگاهی از آثار هنری دانشجویان در روز اختتامیه فستیوال درنگ برگزار خواهد شد. از همه علاقه‌مندان دعوت ‌می‌کنیم تا در اختتامیه درنگ شرکت کرده و از نمایشگاه آثار بازدید کنند.
         </p>
 
         <div class="category-grid">
@@ -1726,10 +1725,10 @@
         <h2 class="section-title"></h2>
         <h2 class="section-title"> </h2>
         <h2 class="section-title"> </h2>
-        <h2 class="title-font section-title">آماده شرکت هستید؟</h2>
+        <h2 class="title-font section-title">جای شما خالی ست!</h2>
         <div class="action-buttons">
             <a href="https://survey.porsline.ir/s/n0QVZ13c" class="action-btn btn btn-white btn-animated"
-                tabindex="0">ثبت نام و ارسال اثر</a>
+                tabindex="0">خرید بلیت اختتامیه و نمایشگاه</a>
             <a href="https://t.me/Medart_support2" class="contact-btn btn btn-white btn-animated" tabindex="0">سوالی
                 داری؟</a>
         </div>
