--- a/index.html
+++ b/index.html
@@ -1727,7 +1727,7 @@
         <h2 class="section-title"> </h2>
         <h2 class="title-font section-title">جای شما خالی ست!</h2>
         <div class="action-buttons">
-            <a href="https://survey.porsline.ir/s/n0QVZ13c" class="action-btn btn btn-white btn-animated"
+            <a href="https://gisheh8.com/Concert/4250" class="action-btn btn btn-white btn-animated"
                 tabindex="0">خرید بلیت اختتامیه و نمایشگاه</a>
             <a href="https://t.me/Medart_support2" class="contact-btn btn btn-white btn-animated" tabindex="0">سوالی
                 داری؟</a>
